fixes spacing

--- a/src/pages/InventoryPage/inventoryPage.scss
+++ b/src/pages/InventoryPage/inventoryPage.scss
@@ -24,6 +24,7 @@
 
     @include tablet {
       flex-direction: row;
+      gap: 1rem;
     }
   }
 
